# telecom-pm

./: .gitignore  PROGRESS.md  README.md
backend/: migrate.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  permissions.py
backend/app/api/: attachments.py  audit.py  auth.py  change_requests.py  dashboard.py  deliverables.py  escalations.py  groups.py  notifications.py  permissions.py  projects.py  router.py  tasks.py  templates.py  users.py
backend/app/models/: __init__.py  attachment.py  audit_log.py  change_request.py  comment.py  escalation.py  notification.py  phase_deliverable.py  project.py  role_permission.py  suspension.py  task.py  user.py  user_group.py  workflow_template.py
backend/app/schemas/: auth.py  common.py  project.py  task.py  template.py
backend/app/seed/: run_seed.py  seed_templates.py  seed_users.py
backend/app/services/: audit_service.py  flow_engine.py  notification_service.py  project_service.py  scheduler.py  task_service.py  template_service.py
backend/telecom_pm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_flow_engine.py  test_scheduler.py
docs/: 01-需求分析.md  02-系统设计.md  03-产品线流程定义.md  04-协作流转详细设计.md  05-前端原型设计.md  06-异常场景设计.md  用户手册.md
docs/superpowers/plans/: 2026-06-15-task-list-view.md
docs/superpowers/specs/: 2026-06-15-task-list-view-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: audit.js  auth.js  change_requests.js  deliverables.js  groups.js  (+4 more)
(+26 files in other folders)
